[package]
name = "gist-uploader"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[[bin]]
name = "gist"
path = "src/main.rs"

[dependencies]
clap = "2.33.1"
dirs = "3.0.1"
env_logger = "0.7.1"
error-chain = "0.12.2"
futures = "0.3.5"
git2 = "0.13.6"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tempfile = "3.1.0"
tokio = { version = "0.2.21", features = ["full"] }
